@@ -1,20 +1,0 @@
-#ifndef __ASXXXX_CONFIG_H
-#define __ASXXXX_CONFIG_H
-
-#undef TYPE_BYTE
-#undef TYPE_WORD
-#undef TYPE_DWORD
-#undef TYPE_UBYTE
-#undef TYPE_UWORD
-#undef TYPE_UDWORD
-
-#if !defined TYPE_WORD && defined _WIN32
-# define TYPE_BYTE char
-# define TYPE_WORD short
-# define TYPE_DWORD int
-# define TYPE_UBYTE unsigned TYPE_BYTE
-# define TYPE_UWORD unsigned TYPE_WORD
-# define TYPE_UDWORD unsigned TYPE_DWORD
-#endif
-
-#endif  /* __ASXXXX_CONFIG_H */
