@@ -1,3 +1,11 @@
+2025-12-05 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* configure,
+	  configure.ac,
+	  sdas/linksrc/clean.mk,
+	  sdas/linksrc/lkelf.c:
+	  Replace type macros by ISO C99 typedefs.
+
 2025-12-04 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* configure,
